cabal-version:      2.4
name:               ch1
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Sean Carroll
maintainer:         seanwilliamcarroll@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Ch1Library,
        Ch1Types,
        Ch1Parser,
        Ch1Evaluator,
        Ch1Environment,
        Ch1Repl

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: 
        base ^>=4.13.0.0,
        parsec,
        mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable ch1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.13.0.0,
        ch1,
        parsec,
        mtl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ch1-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.13.0.0
